[gd_scene load_steps=15 format=3 uid="uid://ckfda4upmty53"]

[ext_resource type="Script" uid="uid://cfnq802dlqokv" path="res://BrainVisualizer/UI/Windows/MappingEditor/MappingEditorRowGeneric.gd" id="1_j8fwg"]
[ext_resource type="Script" uid="uid://c3kgtsjp4sogl" path="res://BrainVisualizer/UI/GenericElements/DropDown/MorphologyDropDown.gd" id="2_ndwr8"]
[ext_resource type="PackedScene" uid="uid://boj8wsv76jqlm" path="res://BrainVisualizer/UI/GenericElements/Vectors/Vector3iField.tscn" id="3_7llad"]
[ext_resource type="Script" uid="uid://bdkrgojqbrto0" path="res://BrainVisualizer/UI/GenericElements/TextBoxes/FloatInput.gd" id="4_y0rve"]
[ext_resource type="Texture2D" uid="uid://cchkky0p7lx5u" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/toggle_on_disabled.png" id="5_taa4s"]
[ext_resource type="Script" uid="uid://dpa1l80uisixv" path="res://BrainVisualizer/UI/GenericElements/Buttons/ToggleButton.gd" id="6_3sy0c"]
[ext_resource type="Texture2D" uid="uid://dtlt3xsdo5bwi" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/edit_S.png" id="7_5oycp"]
[ext_resource type="Texture2D" uid="uid://b85tpdt5nc7bw" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/edit_C.png" id="8_bbn6j"]
[ext_resource type="Texture2D" uid="uid://bkmehptmh3rhh" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/edit_H.png" id="9_21qfw"]
[ext_resource type="Texture2D" uid="uid://bpewdkwkgeov7" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/edit_D.png" id="10_jwhcp"]
[ext_resource type="Texture2D" uid="uid://w077yug12k7x" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Delete_S.png" id="11_owcrx"]
[ext_resource type="Texture2D" uid="uid://di8630a11ncb5" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Delete_C.png" id="12_s71nl"]
[ext_resource type="Texture2D" uid="uid://oi3pour3qyue" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Delete_H.png" id="13_s4moh"]
[ext_resource type="Texture2D" uid="uid://bquoy7fdmhk7l" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Delete_D.png" id="14_yxhwi"]

[node name="MappingEditorRowGeneric" type="HBoxContainer"]
offset_right = 1300.0
offset_bottom = 32.0
size_flags_horizontal = 3
theme_type_variation = &"HBoxContainer_farther"
script = ExtResource("1_j8fwg")

[node name="Morphology_List" type="OptionButton" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
clip_text = true
fit_to_longest_item = false
script = ExtResource("2_ndwr8")

[node name="edit" type="TextureButton" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_type_variation = &"TextureButton_icon"
texture_normal = ExtResource("7_5oycp")
texture_pressed = ExtResource("8_bbn6j")
texture_hover = ExtResource("9_21qfw")
texture_disabled = ExtResource("10_jwhcp")
ignore_texture_size = true
stretch_mode = 0

[node name="Scalar" parent="." instance=ExtResource("3_7llad")]
custom_minimum_size = Vector2(270, 0)
layout_mode = 2
alignment = 1
label_x_text = &""
label_y_text = &""
label_z_text = &""
initial_vector = Vector3i(1, 1, 1)

[node name="PSP" type="LineEdit" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
tooltip_text = "Post-Synaptic Potential
"
alignment = 1
script = ExtResource("4_y0rve")
initial_float = 1.0
min_value = 0.0

[node name="Inhibitory" type="TextureButton" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_type_variation = &"ToggleButton"
texture_normal = ExtResource("5_taa4s")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("6_3sy0c")
enable_autoscaling_with_theme = false

[node name="Plasticity" type="TextureButton" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_type_variation = &"ToggleButton"
texture_normal = ExtResource("5_taa4s")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("6_3sy0c")
enable_autoscaling_with_theme = false

[node name="Plasticity_Constant" type="LineEdit" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
tooltip_text = "Plasticity"
alignment = 1
script = ExtResource("4_y0rve")
initial_float = 1.0

[node name="LTP_Multiplier" type="LineEdit" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
alignment = 1
script = ExtResource("4_y0rve")
initial_float = 1.0

[node name="LTD_Multiplier" type="LineEdit" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
alignment = 1
script = ExtResource("4_y0rve")
initial_float = 1.0

[node name="remove" type="TextureButton" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_type_variation = &"TextureButton_icon"
texture_normal = ExtResource("11_owcrx")
texture_pressed = ExtResource("12_s71nl")
texture_hover = ExtResource("13_s4moh")
texture_disabled = ExtResource("14_yxhwi")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="edit" to="." method="_on_edit_pressed"]
[connection signal="float_confirmed" from="PSP" to="." method="_on_user_PSP"]
[connection signal="toggled" from="Plasticity" to="." method="_on_user_toggle_plasticity"]
[connection signal="pressed" from="remove" to="." method="_on_mapping_delete_press"]
